tests/errors/CyclicExprAlias0.hs
module CyclicExprAlias0 () where

{-@ expression CyclicA1 Q = CyclicA1 Q @-}

